--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>João Artur</h1>
+    <h1>João Artur :)</h1>
+    <h2>Gabrielle Ferreira :)</h2>
     
 </body>
 </html>
